# anycaptcha

./: .gitignore  README.md  pyproject.toml
anycaptcha/: __init__.py  enums.py  solver.py
anycaptcha/captcha/: __init__.py  cloudflare_turnstile.py  geetest_v4.py
anycaptcha/service/: anti_captcha.py  azcaptcha.py  capmonster.py  capsolver.py  captcha_guru.py  deathbycaptcha.py  multibot_captcha.py  rucaptcha.py  twocaptcha.py
examples/: solve_namecheap_cf_clearance.py  solve_standalone_turnstile.py
openspec/changes/add-cloudflare-turnstile/: design.md  proposal.md  tasks.md
openspec/changes/add-cloudflare-turnstile/specs/cloudflare-turnstile-captcha/: spec.md
tests/: test_public_api.py
