[project]
name = "anycaptcha"
version = "1.6.0"
description = "All captcha solving services in one lib"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "better-proxy>=1.3",
    "filetype>=1.2.0",
    "httpx[socks]>=0.27",
    "pydantic>=1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anycaptcha*"]
exclude = ["openspec*"]

[dependency-groups]
dev = [
    "curl-cffi>=0.15.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
